Fix exception when saving content selectors
Fix library changed for default content selectors